// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requireConfig should work 1`] = `
Object {
  "config": Object {},
  "path": "/Users/smelukov/github/statoscope/statoscope.config.js",
}
`;

exports[`requireConfig should work 2`] = `
Object {
  "config": Object {},
  "path": "/Users/smelukov/github/statoscope/fooooo",
}
`;

exports[`requireConfig should work 3`] = `
Object {
  "config": Object {
    "validate": Object {
      "plugins": Array [
        Array [
          "../../../../packages/stats-validator-plugin-webpack",
          "webpack",
        ],
      ],
      "rules": Object {
        "webpack/restricted-modules": Array [
          "error",
          Array [
            /\\\\/src\\\\//,
          ],
        ],
        "webpack/restricted-packages": Array [
          "error",
          Array [
            "foo",
          ],
        ],
      },
    },
  },
  "path": "/Users/smelukov/github/statoscope/test/fixtures/cli/validate/config.js",
}
`;
